--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "uuid": "^8.3.2",
     "vue": "^3.0.0"
   },
